--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+
+# Database configuration file
+
+db.driver = org.postgresql.Driver
+db.address = jdbc:postgresql://localhost:5432/FlightSystem
+db.username = postgres
+db.password = kobi077
+
+
 Libraries used:
 ==================================================================
 
